[project]
name = "font-franken"
version = "0.1.0"
description = "Build tool that combines different Monaspace font families into a single unified family, enabling per-syntax-scope typeface differentiation in editors like VS Code and Cursor."
readme = "README.md"
license = "OFL-1.1"
license-files = ["LICENSE"]
requires-python = ">=3.14"
dependencies = [
    "brotli>=1.2.0",
    "fonttools>=4.61.1",
]

[dependency-groups]
dev = [
    "pyrefly>=0.19.0",
]

[tool.pyrefly]
python-interpreter-path = ".venv/bin/python"
